PLUGINWIZARD-100 : Small generator fixes - Manage method refactoring

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
@@ -43,12 +43,38 @@ public abstract class ${feature_name}JspBean extends MVCAdminJspBean
 {
     // Right
     public static final String RIGHT_${feature_name?upper_case} = "${feature_right}";
-    protected static final String PARAMETER_PAGE_INDEX = "page_index";
-    protected static final String MARK_PAGINATOR = "paginator";
-    protected static final String MARK_NB_ITEMS_PER_PAGE = "nb_items_per_page";
+    
+    private static final String PROPERTY_DEFAULT_LIST_ITEM_PER_PAGE = "${plugin_model.pluginName}.listItems.itemsPerPage";
+    private static final String PARAMETER_PAGE_INDEX = "page_index";
+    private static final String MARK_PAGINATOR = "paginator";
+    private static final String MARK_NB_ITEMS_PER_PAGE = "nb_items_per_page";
 
     //Variables
-    protected int _nDefaultItemsPerPage;
-    protected String _strCurrentPageIndex;
-    protected int _nItemsPerPage;
+    private int _nDefaultItemsPerPage;
+    private String _strCurrentPageIndex;
+    private int _nItemsPerPage;
+
+    protected Map<String, Object> getPaginatedListModel( HttpServletRequest request, String strBookmark, List list,
+        String strManageJsp )
+    {
+        _strCurrentPageIndex = Paginator.getPageIndex( request, Paginator.PARAMETER_PAGE_INDEX, _strCurrentPageIndex );
+        _nDefaultItemsPerPage = AppPropertiesService.getPropertyInt( PROPERTY_DEFAULT_LIST_ITEM_PER_PAGE, 50 );
+        _nItemsPerPage = Paginator.getItemsPerPage( request, Paginator.PARAMETER_ITEMS_PER_PAGE, _nItemsPerPage,
+                _nDefaultItemsPerPage );
+
+        UrlItem url = new UrlItem( strManageJsp );
+        String strUrl = url.getUrl(  );
+
+        // PAGINATOR
+        LocalizedPaginator paginator = new LocalizedPaginator( list, _nItemsPerPage, strUrl, PARAMETER_PAGE_INDEX,
+                _strCurrentPageIndex, getLocale(  ) );
+
+        Map<String, Object> model = getModel(  );
+
+        model.put( MARK_NB_ITEMS_PER_PAGE, "" + _nItemsPerPage );
+        model.put( MARK_PAGINATOR, paginator );
+        model.put( strBookmark, paginator.getPageItems(  ) );
+
+        return model;
+    }
 }
