PLUGINWIZARD-100 : Small generator fixes - missing javadocs

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_jspbean_abstract_parent_alternative.html
@@ -61,6 +61,14 @@ public abstract class ${feature_name}JspBean extends MVCAdminJspBean
     private String _strCurrentPageIndex;
     private int _nItemsPerPage;
 
+    /**
+     * Return a model that contains the list and paginator infos
+     * @param request The HTTP request
+     * @param strBookmark The bookmark
+     * @param list The list of item
+     * @param strManageJsp The JSP
+     * @return The model
+     */
     protected Map<String, Object> getPaginatedListModel( HttpServletRequest request, String strBookmark, List list,
         String strManageJsp )
     {
