PLUGINWIZARD-100 : Small generator fixes - FindBugs fix

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -44,11 +44,13 @@ import org.hibernate.validator.constraints.*;
 <#if hasDate?? && hasDate>
 import java.sql.Date;
 </#if>
+import java.io.Serializable;
+
 
 /**
  * This is the business class for the object ${business_class.businessClass}
  */ 
-public class ${business_class.businessClass}
+public class ${business_class.businessClass} implements Serializable
 {
     // Variables declarations 
     private int _nId;
