PLUGINWIZARD-100 : Small generator fixes - FindBugs fix

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_business_class_alternative.html
@@ -52,6 +52,8 @@ import java.io.Serializable;
  */ 
 public class ${business_class.businessClass} implements Serializable
 {
+    private static final long serialVersionUID = 1L;
+
     // Variables declarations 
     private int _nId;
     <#list business_class.attributes as attribute>
