--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_business_dao_classic.html
@@ -38,7 +38,7 @@ import fr.paris.lutece.portal.service.plugin.Plugin;
 import fr.paris.lutece.util.sql.DAOUtil;
 
 import java.util.ArrayList;
-import java.util.Collection;
+import java.util.List;
 
 /**
  * This class provides Data Access methods for ${business_class.businessClass} objects
@@ -156,9 +156,9 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
      * {@inheritDoc }
      */
     @Override
-    public Collection&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
+    public List&lt;${business_class.businessClass}&gt; select${business_class.businessClass}sList( Plugin plugin )
     {
-        Collection&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
+        List&lt;${business_class.businessClass}&gt; ${business_class.instanceName}List = new ArrayList&lt;${business_class.businessClass}&gt;(  );
         DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL, plugin );
         daoUtil.executeQuery(  );
 
@@ -182,9 +182,9 @@ public final class ${business_class.businessClass}DAO implements I${business_cla
      * {@inheritDoc }
      */
     @Override
-    public Collection&lt;Integer&gt; selectId${business_class.businessClass}sList( Plugin plugin )
+    public List&lt;Integer&gt; selectId${business_class.businessClass}sList( Plugin plugin )
     {
-            Collection&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;Integer&gt;( );
+            List&lt;Integer&gt; ${business_class.instanceName}List = new ArrayList&lt;Integer&gt;( );
             DAOUtil daoUtil = new DAOUtil( SQL_QUERY_SELECTALL_ID, plugin );
             daoUtil.executeQuery(  );
 
