PLUGINWIZARD-105 : Replace Bootstrap v2 classes by v3 version

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_template_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_xpage_template_alternative.html
@@ -116,12 +116,12 @@
         </#list>
         <td>
             <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
+               class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <span class="glyphicon glyphicon-edit"></span>
             </a>
 
             <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}&action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
+               class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <span class="glyphicon glyphicon-trash"></span>
             </a>
         </td>
