--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/alternative/gt_html_admin_alternative.html
@@ -75,12 +75,12 @@
         </#list>
         <td>
             <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
+               class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="fa fa-pencil"></i>
             </a>
 
             <a href="jsp/admin/plugins/${plugin_name}/Manage${business_class.businessClass}s.jsp?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
+               class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="fa fa-trash"></i>
             </a>
         </td>
