--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_template_classic.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/classic/gt_xpage_template_classic.html
@@ -115,12 +115,12 @@
         </#list>
         <td>
             <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?view=modify${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
+               class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="icon-edit icon-white"></i>
             </a>
 
             <a href="jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}?action=confirmRemove${business_class.businessClass}&id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
+               class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="icon-trash icon-white"></i>
             </a>
         </td>
