--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/generators/commons/gt_html_admin.html
@@ -108,12 +108,12 @@
             </#list>
         <td>
             <a href="jsp/admin/plugins/${plugin_name?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
+               class="btn btn-primary btn-sm" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="icon-edit icon-white"></i>
             </a>
 
             <a href="jsp/admin/plugins/${plugin_name?lower_case}/Remove${business_class.businessClass?cap_first}.jsp?id=${bra_open}${business_class.businessClass?lower_case?lower_case}.id${bra_close}"
-               class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
+               class="btn btn-danger btn-sm" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="icon-trash icon-white"></i>
             </a>
         </td>
