--- a/webapp/WEB-INF/templates/generators/default/xml/gt_xml_spring_context.html
+++ b/webapp/WEB-INF/templates/generators/default/xml/gt_xml_spring_context.html
@@ -9,7 +9,7 @@
 <#if plugin.getRest().getIdBusinessClasses() ??>
 <#list plugin.getRest().getIdBusinessClasses() as id_business_class>
 <#if id_business_class == business_class.getId() >
-    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}Rest"  class="fr.paris.lutece.plugins.${plugin.pluginName}.web.rs.${business_class.businessClass?cap_first}Rest" />
+    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}Rest" class="fr.paris.lutece.plugins.${plugin.pluginName}.rs.${business_class.businessClass?cap_first}Rest" />
 </#if>
 </#list>
 </#if>
@@ -18,13 +18,13 @@
 
 <#list plugin.businessClasses as business_class>
 <#if business_class?? > 
-    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
+    <bean id="${plugin.pluginName}.${business_class.businessClass?uncap_first}DAO" class="fr.paris.lutece.plugins.${plugin.pluginName}.business.${business_class.businessClass?cap_first}DAO" />  
 </#if>    
 </#list>
 <#list plugin.portlets as portlet>
 <#if portlet?? >
 
-    <bean id="${plugin.pluginName}.${portlet.portletClass}DAO"  class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portlet.portletClass}DAO" />    
+    <bean id="${plugin.pluginName}.${portlet.portletClass}DAO" class="fr.paris.lutece.plugins.${plugin.pluginName}.business.portlet.${portlet.portletClass}DAO" />    
 </#if>    
 </#list>
 </beans>
